--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -4,6 +4,8 @@ $grey_5: #ffffff45;
 $grey_black_5: #665f5f50;
 $black: #000000;
 $main_purple: #8a00ff;
+$main_medium_purple: #b971f8;
+$main_plum_purple: #cea1f9;
 $main_purple-dark-5: #5c00ad80;
 $main_purple-dark: #5b00ab;
 
