add font,styling dropDownInput

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -11,3 +11,5 @@ $main_purple-dark: #5b00ab;
 
 $input-color-dark:  #8d5a92;
 $input-bg-dark: #341c7e6a;
+$chart-green: #0ead98;
+$chart-red: #db5541;
