fix backend bug/small styling improvement

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -11,5 +11,6 @@ $main_purple-dark: #5b00ab;
 
 $input-color-dark:  #8d5a92;
 $input-bg-dark: #341c7e6a;
+$input-bg-dark-2: #341c7e2d;
 $chart-green: #0ead98;
 $chart-red: #db5541;
