update node/adjust search ui

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -9,7 +9,9 @@ $main_plum_purple: #cea1f9;
 $main_purple-dark-5: #5c00ad80;
 $main_purple-dark: #5b00ab;
 
+$medium-purple: #482f5f;
 $input-color-dark:  #8d5a92;
+$bg-dark-purple: #16083e;
 $input-bg-dark: #341c7e6a;
 $input-bg-dark-2: #341c7e2d;
 $chart-green: #0ead98;
