--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -1,5 +1,6 @@
 $white: #ffffff; 
 $white-5: #ffffff5a;
+$white-2: #ffffff2f;
 $grey_5: #ffffff45;
 $dark_blue: #05173781;
 $grey_black_5: #665f5f50;
