--- a/zth/src/assets/main.scss
+++ b/zth/src/assets/main.scss
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com");
+@import url("https://fonts.gstatic.com");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+@import url("https://fonts.googleapis.com/css2?family=Segoe+UI:wght@300;400;500&display=swap");
+
 *,
 *::before,
 *::after {
@@ -12,21 +17,26 @@ html {
   scroll-behavior: smooth;
   pointer-events: auto;
 }
-
 body {
   min-height: 100vh;
+  margin: 0;
   color: var(--color-text);
   background: linear-gradient(189deg, rgba(29,12,56,1) 0%, rgba(12,20,68,1) 53%, rgba(44,16,65,1) 100%);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6rem;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  // font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  //   Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
+  //   sans-serif;
   font-size: 1.6rem;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+body *{
+  font-family:  "Segoe UI", sans-serif;
+
+}
+
 main{
   @media (min-width: $breakpoint_small){
     margin: 0 0 0 8.5rem;
