css improvement -> BEM

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -4,6 +4,7 @@ $white-2: #ffffff2f;
 $grey_5: #ffffff45;
 $dark_blue: #05173781;
 $grey_black_5: #665f5f50;
+$light_grey: lightgrey;
 $black: #000000;
 $main_purple: #8a00ff;
 $main_medium_purple: #b971f8;
@@ -18,3 +19,4 @@ $input-bg-dark: #341c7e6a;
 $input-bg-dark-2: #341c7e2d;
 $chart-green: #0ead98;
 $chart-red: #db5541;
+$metamask_yellow: #e8821e;
