--- a/zth/src/assets/_global.scss
+++ b/zth/src/assets/_global.scss
@@ -1,4 +1,3 @@
-@import "_colors.scss";
-@import "_breakpoints.scss";
-@import "animation.scss";
-
+@import '_colors.scss';
+@import '_breakpoints.scss';
+@import 'animation.scss';
