add styling/fix styling issue

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -1,3 +1,4 @@
+// Base colors
 $white: #ffffff;
 $white-5: #ffffff5a;
 $white-2: #ffffff2f;
@@ -6,6 +7,8 @@ $dark_blue: #05173781;
 $grey_black_5: #665f5f50;
 $light_grey: lightgrey;
 $black: #000000;
+
+// Dark theme colors(Main)
 $main_purple: #8a00ff;
 $main_medium_purple: #b971f8;
 $main_plum_purple: #cea1f9;
@@ -16,6 +19,7 @@ $input-color-dark: #8d5a92;
 $bg-dark-purple: #16083e;
 $input-bg-dark: #341c7e6a;
 $input-bg-dark-2: #341c7e2d;
-$chart-green: #0ead98;
-$chart-red: #db5541;
 $metamask_yellow: #e8821e;
+
+$chart-green: #174a51;
+$chart-red: #4e1f30;
