fix some issue/add loader

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -3,6 +3,7 @@ $white: #ffffff;
 $white-5: #ffffff5a;
 $white-2: #ffffff2f;
 $grey_5: #ffffff45;
+$bg-color-grey: #d7d7d780;
 $dark_blue: #05173781;
 $grey_black_5: #665f5f50;
 $light_grey: lightgrey;
