improve long short ratio function.Improve style

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -22,5 +22,11 @@ $input-bg-dark: #341c7e6a;
 $input-bg-dark-2: #341c7e2d;
 $metamask_yellow: #e8821e;
 
-$chart-green: #174a51;
-$chart-red: #4e1f30;
+$chart-dark-green: #123B40;
+$chart-dark-red: #442028;
+
+$chart-light-green: #16C784;
+
+
+$chart-green: #0ead98;
+$chart-red: #db5541;
