--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -2,25 +2,25 @@
 $white: #ffffff;
 $white-5: #ffffff5a;
 $white-2: #ffffff2f;
-$grey_5: #ffffff45;
+$grey-5: #ffffff45;
 $bg-color-grey: #d7d7d780;
-$dark_blue: #05173781;
-$grey_black_5: #665f5f50;
-$light_grey: lightgrey;
+$dark-blue: #05173781;
+$grey-black-5: #665f5f50;
+$light-grey: lightgrey;
 $black: #000000;
 
 // Dark theme colors(Main)
-$main_purple: #8a00ff;
-$main_medium_purple: #b971f8;
-$main_plum_purple: #cea1f9;
-$main_purple-dark-5: #5c00ad80;
-$main_purple-dark: #5b00ab;
+$main-purple: #8a00ff;
+$main-medium-purple: #b971f8;
+$main-plum-purple: #cea1f9;
+$main-purple-dark-5: #5c00ad80;
+$main-purple-dark: #5b00ab;
 $medium-purple: #482f5f;
 $input-color-dark: #8d5a92;
 $bg-dark-purple: #16083e;
 $input-bg-dark: #341c7e6a;
 $input-bg-dark-2: #341c7e2d;
-$metamask_yellow: #e8821e;
+$metamask-yellow: #e8821e;
 
 $chart-dark-green: #123B40;
 $chart-dark-red: #442028;
