adjust styling all

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -13,6 +13,7 @@ $black: #000000;
 $main-purple: #8a00ff;
 $main-medium-purple: #b971f8;
 $main-plum-purple: #cea1f9;
+$main-light-purple: #e1caf796;
 $main-purple-dark-5: #5c00ad80;
 $main-purple-dark: #5b00ab;
 $medium-purple: #482f5f;
