--- a/zth/src/assets/_mixins.scss
+++ b/zth/src/assets/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin customHorizontalScrollbar($height: 0.8rem, $color: $main-purple, $border-radius: 1rem) {
+@mixin customHorizontalScrollbar($height: 0.8rem,$width: 0.7rem, $color: $main-purple, $border-radius: 1rem) {
     // Chrome and Firefox
     scrollbar-color: $color transparent;
     -webkit-scrollbar-color: $color transparent;
@@ -8,6 +8,7 @@
     // Chrome
     &::-webkit-scrollbar {
       height: $height;
+      width: $width;
     }
     &::-webkit-scrollbar-thumb {
       background: $color;
@@ -18,15 +19,20 @@
     & {
       scrollbar-width: thin;
     }
-    &::-moz-scrollbar {
+    &::-moz-scrollbar-thumb {
       height: $height;
     }
     &::-moz-scrollbar-thumb {
+      width: $width;
         background: $color;
         border-top-left-radius: $border-radius;
         border-top-right-radius: $border-radius;
         border-bottom-left-radius: $border-radius;
         border-bottom-right-radius: $border-radius;
+    }
+    &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+      background-color: #fffcfc;
     }
   }
   
