--- a/zth/src/assets/main.scss
+++ b/zth/src/assets/main.scss
@@ -29,6 +29,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @include customHorizontalScrollbar($height: 0.1rem,  $border-radius: 0.5rem);
+
 }
 
 body *{
