--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -5,9 +5,13 @@ $white-2: #ffffff2f;
 $grey-5: #ffffff45;
 $bg-color-grey: #d7d7d780;
 $dark-blue: #05173781;
-$grey-black-5: #665f5f50;
+
+$grey-black-2: #665e5e34;
+$grey-black-5: #665f5fb0;
+$grey-black-8: #665e5ecc;
 $light-grey: lightgrey;
 $black: #000000;
+$black-2: rgba(0, 0, 0, 0.197);
 
 // Dark theme colors(Main)
 $main-purple: #8a00ff;
@@ -21,6 +25,7 @@ $input-color-dark: #8d5a92;
 $bg-dark-purple: #16083e;
 $input-bg-dark: #341c7e6a;
 $input-bg-dark-2: #341c7e2d;
+$input-bg-dark-8: #341c7ed1;
 $metamask-yellow: #e8821e;
 
 $chart-dark-green: #123B40;
