--- a/zth/src/assets/main.scss
+++ b/zth/src/assets/main.scss
@@ -1,3 +1,87 @@
+/* encode-sans-semi-expanded-100 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 100;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-100.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-200 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 200;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-200.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-300 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 300;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 400;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-500 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 500;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 600;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-600.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 700;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-800 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 800;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-800.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* encode-sans-semi-expanded-900 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: 'Encode Sans Semi Expanded';
+  font-style: normal;
+  font-weight: 900;
+  src: url('./fonts/encode-sans-semi-expanded-v19-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+
+
+
 *,
 *::before,
 *::after {
@@ -34,7 +118,7 @@ body {
 }
 
 body *{
-  font-family:  "Segoe UI", sans-serif;
+  font-family:  "Encode Sans Semi Expanded", sans-serif;
 }
 
 main{
@@ -44,6 +128,7 @@ main{
     margin: 1rem;
     margin: 0 0 0 8.5rem;
   }
+  
 }
 
 button {
