--- a/zth/src/assets/_default-values.scss
+++ b/zth/src/assets/_default-values.scss
@@ -1,2 +1,9 @@
+// Font size
+$font-size-small: 1.4rem;
+$font-size-base: 1.6rem;
+$font-size-medium: 2rem;
+$font-size-large: 3rem;
+
+// border radius
 $border-light: 0.4rem;
 $border-middle: 0.7rem;
