--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -1,3 +1,5 @@
+// TODO adjust color light/dark with own color
+
 // Base colors
 $white: #ffffff;
 $white-5: #ffffff5a;
@@ -44,3 +46,5 @@ $gradient-news-text: linear-gradient(
     rgb(110, 42, 144) 0%,
     rgba(220, 36, 48, 1) 100%
   );
+
+  
