--- a/zth/src/assets/_default-values.scss
+++ b/zth/src/assets/_default-values.scss
@@ -1,3 +1,4 @@
+@import '_typography.scss';
 // Font size
 $font-size-small: 1.4rem;
 $font-size-base: 1.6rem;
@@ -7,3 +8,10 @@ $font-size-large: 3rem;
 // border radius
 $border-light: 0.4rem;
 $border-middle: 0.7rem;
+
+
+$image-small: clamp(2rem, 3vw + 1rem, 2.4rem);
+
+$clamp-font-small: clamp($font-very-small, 1vw + 0.8rem, $font-small);
+$clamp-font-small-2: clamp($font-very-small, 1vw + 1rem, $font-small);
+$clamp-font-very-small: clamp($font-tiny, 0.5vw + 1rem, $font-very-small);
