--- a/zth/src/assets/_global.scss
+++ b/zth/src/assets/_global.scss
@@ -1,5 +1,6 @@
 @import '_colors.scss';
 @import '_default-values.scss';
 @import '_breakpoints.scss';
+@import '_typography.scss';
 @import 'animation.scss';
 @import '_mixins.scss';
