--- a/zth/src/assets/main.scss
+++ b/zth/src/assets/main.scss
@@ -79,13 +79,7 @@
   src: url('./fonts/encode-sans-semi-expanded-v19-latin-900.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
 
-:root {
-  --clr-body-bg: hsl(0 0% 90%);
-  --clr-card-bg: hsl(0 0% 100%);
-  --clr-text: hsl(0 0% 15%);
-  --clr-heading: hsl(0 0% 25%);
-  --red: blue;
-}
+
 *,
 *::before,
 *::after {
@@ -170,6 +164,7 @@ h1 {
   line-height: $line-height-default;
 }
 
-html[data-zth-color-scheme="dark"]{
-  --red: $white;
-}
+// TODO implement this
+// html[data-zth-color-scheme="dark"]{
+//   --red: $white;
+// }
