partial implement news new style

--- a/zth/src/assets/_default-values.scss
+++ b/zth/src/assets/_default-values.scss
@@ -1,4 +1,6 @@
 @import '_typography.scss';
+// max width
+$default-max-width: 160rem;
 // Font size
 $font-size-small: 1.4rem;
 $font-size-base: 1.6rem;
