--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -4,14 +4,14 @@
 $white: #ffffff;
 $white-5: #ffffff5a;
 $white-2: #ffffff2f;
-$grey-5: #ffffff45;
+$grey-5: #ffffff41;
 $bg-color-grey: #d7d7d780;
 $dark-blue: #05173781;
 
 $grey-black-2: #665e5e34;
 $grey-black-5: #665f5fb0;
 $grey-black-8: #665e5ecc;
-$light-grey: lightgrey;
+$light-grey: #d3d3d3;
 $black: #000000;
 $black-2: rgba(0, 0, 0, 0.197);
 
