finish implement thema

--- a/zth/src/assets/animation.scss
+++ b/zth/src/assets/animation.scss
@@ -21,3 +21,13 @@
     opacity: 1;
   }
 }
+
+@keyframes slide-in {
+  from {
+    transform: translateX(-1rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
