add bg color/fix issue with meta

--- a/zth/src/assets/_colors.scss
+++ b/zth/src/assets/_colors.scss
@@ -23,6 +23,7 @@
 --brand-purple-lighter: #cea1f9;
 --brand-purple-lightest: #e1caf769;
 
+--brand-purple-darker: #19012d;
 --brand-purple-dark: #5b00ab;
 --brand-purple-dark-light: #482f5f;
 --brand-purple-dark-5: #5c00ad80;
